# GeneralistAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chatbi/: __init__.py
chatbi/capabilities/: __init__.py
chatbi/cli/: main.py
chatbi/conversation/: __init__.py
chatbi/infra/: __init__.py
chatbi/observability/: __init__.py  context.py  langsmith_setup.py  llm_factory.py
chatbi/orchestrator/: __init__.py
chatbi/server/: __init__.py  app.py
docs/: proxy-teammate-skill-template.md
docs/examples/: proxy_chatbi.SKILL.md
learn/05-memory-persistence/: README.md
remote/skills/: skill_meta.db  skills.db
scripts/: check_requirements_sync.py  pip-install.ps1  pip-install.sh
skills/calculator/: SKILL.md
skills/general/: SKILL.md
skills/greeter/: SKILL.md
src/: __init__.py  main.py
src/core/: __init__.py  agent.py  config.py  model.py
src/interface/: __init__.py  cli.py  log.py
src/orchestration/: __init__.py  context.py  mailbox.py  nl2sql_tools.py  proxy_tools.py  runner.py  task_list.py  team.py  teammate.py  tools.py
src/persistence/: __init__.py  leader_store.py  session_manager.py  tool_truncate.py  (+1 more)
tests/: conftest.py  test_cleanup_turn.py  test_foundation.py  test_leader_persistence.py  test_nl2sql_tools.py  test_orchestration.py  test_orchestration_tools.py  test_phase6_mailbox_and_logs.py  test_proxy_teammate.py  test_proxy_teammate_e2e.py  test_session_manager.py  test_skill_center.py  test_streaming.py  test_teammate_memory.py  test_tool_truncate.py  test_user_migration.py  test_user_scope.py
(+101 files in other folders)
