[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbi"
version = "0.1.0"
description = "供应链 ChatBI Agent —— 基于 LangChain DeepAgent 的统一中控 Agent"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ChatBI Team" }]
dependencies = [
    "langchain>=0.2",
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "deepagents>=0.0.5",
    "langsmith>=0.1.99",
    "langgraph>=0.2",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[project.scripts]
chatbi = "chatbi.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatbi*"]
exclude = ["tests*", "evals*", "learn*", "skills*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
